# productivity-suite

./: BUG_FIXES_REPORT.md  integration_test.py
OritzPDF/: .env.example  .gitignore  PROJECT_STATUS.md  README.md  claude.md  implementation.md  plan.md  pytest.ini  requirements.txt  research_findings.md  run.py  run_tests.py  setup.py  test_basic_run.py  test_fixes.py
OritzPDF/.claude/: settings.local.json
OritzPDF/src/: config.py  main.py
OritzPDF/src/api/: analysis.py  documents.py  health.py
OritzPDF/src/models/: analysis.py  document.py
OritzPDF/src/services/: cache_service.py  document_service.py  pdf_processor.py  storage_service.py
OritzPDF/tests/: README.md  __init__.py  conftest.py  test_api_analysis.py  test_api_documents.py  test_cache_service.py  test_config.py  test_document_service.py  test_pdf_processor.py  test_storage_service.py
OritzPDF/tests/utils/: test_helpers.py
Productivity/: .gitignore  CODE_REVIEW_REPORT.md  LICENSE  README.md  claude.md  implementation.md  jest.config.js  package.json  plan.md  playwright.config.ts  research_findings.md  test-setup.ts  tsconfig.json  turbo.json
Productivity/.claude/: settings.local.json
Productivity/.github/workflows/: build-and-release.yml  test.yml
Productivity/apps/copilot-doc/: index.html  package.json  tailwind.config.js  vite.config.ts
Productivity/apps/copilot-doc/src/: App.css  App.tsx  main.tsx
Productivity/apps/copilot-doc/src-tauri/: Cargo.toml  tauri.conf.json
Productivity/apps/copilot-doc/src-tauri/src/: document_service.rs  export_service.rs  main.rs
Productivity/apps/copilot-doc/src-tauri/templates/: essay.html  letter.html  meeting_notes.html  memo.html  report.html
Productivity/apps/copilot-doc/src/components/: AIAssistant.tsx  DocumentPanel.tsx  Editor.tsx  ExportDialog.tsx  FindReplaceDialog.tsx  StatusBar.tsx  TemplateSelector.tsx  Toolbar.tsx
Productivity/apps/copilot-doc/src/hooks/: useAI.ts  useDocument.ts  useEditor.ts  useKeyboardShortcuts.ts
Productivity/apps/copilot-doc/src/services/: document.ts  export.ts
Productivity/apps/copilot-doc/src/types/: index.ts
Productivity/apps/copilot-grid/: index.html  package.json  tsconfig.json  vite.config.ts
Productivity/apps/copilot-grid/src/: App.css  App.tsx  index.css  main.tsx
Productivity/apps/copilot-grid/src-tauri/: Cargo.toml  tauri.conf.json
Productivity/apps/copilot-grid/src-tauri/src/: data_analyzer.rs  formula_engine.rs  main.rs  spreadsheet_service.rs
Productivity/apps/copilot-grid/src/components/: AIAnalyzer.tsx  ChartBuilder.tsx  FormulaBar.tsx  ImportExportDialog.tsx  SheetTabs.tsx  Spreadsheet.tsx  TemplateGallery.tsx  Toolbar.tsx
Productivity/apps/copilot-grid/src/hooks/: useAI.ts  useFormula.ts  useSpreadsheet.ts
Productivity/apps/copilot-grid/src/services/: export.ts  spreadsheet.ts
Productivity/apps/copilot-grid/src/types/: index.ts
Productivity/apps/copilot-inbox/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Productivity/apps/copilot-inbox/src/: App.tsx  index.css
Productivity/apps/copilot-inbox/src-tauri/: Cargo.toml  tauri.conf.json
Productivity/apps/copilot-inbox/src-tauri/src/: email_service.rs  imap_client.rs  main.rs  parser.rs  smtp_client.rs
Productivity/apps/copilot-inbox/src/components/: AIAssistant.tsx  AttachmentPanel.tsx  ComposeDialog.tsx  EmailList.tsx  EmailViewer.tsx  FolderSidebar.tsx  SearchBar.tsx  SettingsDialog.tsx
Productivity/apps/copilot-inbox/src/hooks/: useAI.ts  useAuth.ts  useEmail.ts
Productivity/apps/copilot-inbox/src/services/: email.ts  imap.ts
Productivity/apps/copilot-inbox/src/types/: index.ts
Productivity/apps/copilot-nest/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Productivity/apps/copilot-nest/src/: App.tsx  index.css
Productivity/apps/copilot-nest/src-tauri/: Cargo.toml  tauri.conf.json
Productivity/apps/copilot-nest/src-tauri/src/: file_service.rs  indexer.rs  main.rs  search.rs
Productivity/apps/copilot-nest/src/components/: AIPanel.tsx  AnalyticsPanel.tsx  DocumentViewer.tsx  FileExplorer.tsx  SearchPanel.tsx
Productivity/apps/copilot-nest/src/hooks/: useAI.ts  useFileSystem.ts  useSearch.ts
Productivity/apps/copilot-nest/src/services/: analysis.ts  indexing.ts
Productivity/apps/copilot-nest/src/types/: index.ts
Productivity/apps/mini-claude-code/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Productivity/apps/mini-claude-code/src/: App.tsx  index.css
Productivity/apps/mini-claude-code/src-tauri/: Cargo.toml  tauri.conf.json
Productivity/apps/mini-claude-code/src-tauri/src/: debugger.rs  file_service.rs  lsp_client.rs  main.rs  project_service.rs  terminal.rs
Productivity/apps/mini-claude-code/src/components/: AIAssistant.tsx  DebugPanel.tsx  Editor.tsx  FileExplorer.tsx  SearchPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
Productivity/apps/mini-claude-code/src/hooks/: useAI.ts  useEditor.ts  useProject.ts
Productivity/apps/mini-claude-code/src/services/: editor.ts  language.ts
Productivity/apps/mini-claude-code/src/types/: index.ts
Productivity/scripts/: setup-tests.sh  test-runner.js
Productivity/test-utils/: ai-mocks.ts  index.ts  mock-data.ts  react-helpers.tsx  tauri-mocks.ts
Productivity/tests/e2e/: copilot-doc.spec.ts  copilot-nest.spec.ts  cross-app-integration.spec.ts
Productivity/tests/performance/: ai-operations.spec.ts
