[package]
name = "copilot-doc"
version = "1.0.0"
description = "AI-powered word processor"
authors = ["Productivity Suite"]
license = "MIT"
repository = ""
default-run = "copilot-doc"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "api-all", "fs-extra", "dialog-all", "window-all"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
regex = "1.0"
html2text = "0.6"
docx-rs = "0.4"
lopdf = "0.32"
pandoc = "0.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]