[package]
name = "copilot-grid"
version = "0.1.0"
description = "AI-Powered Spreadsheet Application"
authors = ["Productivity Suite Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = ["api-all", "dialog-all", "fs-all"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
csv = "1.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
evalexpr = "11.3"
calamine = "0.22"
xlsxwriter = "0.6"
uuid = { version = "1.6", features = ["v4"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]