[package]
name = "copilot-inbox"
version = "0.1.0"
description = "AI-Powered Email Assistant"
authors = ["Productivity Suite"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
base64 = "0.21"
regex = "1.10"
mail-parser = "0.8"
mail-builder = "0.3"
rustls = "0.21"
rustls-native-certs = "0.6"
async-imap = "0.6"
async-smtp = "0.3"
async-std = "1.12"
html2text = "0.6"
scraper = "0.18"
sha2 = "0.10"
aes-gcm = "0.10"
ring = "0.17"

[[bin]]
name = "copilot-inbox"
path = "src/main.rs"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]