[package]
name = "copilot-nest"
version = "1.0.0"
description = "CopilotNest - Central Hub for AI-Powered Productivity Suite"
authors = ["Productivity Suite Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "api-all", "fs-extra", "dialog-all", "window-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
walkdir = "2.4"
ignore = "0.4"
tantivy = "0.21"
regex = "1.10"
mime_guess = "2.0"
encoding_rs = "0.8"
sha2 = "0.10"
base64 = "0.21"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
rayon = "1.8"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
num_cpus = "1.16"
dirs = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]