[package]
name = "mini-claude-code"
version = "1.0.0"
description = "AI-powered code editor for enhanced development productivity"
authors = ["Productivity Suite Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["api-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-remove-file", "fs-remove-dir", "fs-copy-file", "fs-rename-file", "path-all", "dialog-all", "window-all", "shell-open", "process-command-api", "process-relaunch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
futures = "0.3"
notify = "6.0"
walkdir = "2.3"
regex = "1.7"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = { version = "0.20", features = ["typescript"] }
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-json = "0.20"
tree-sitter-html = "0.19"
tree-sitter-css = "0.19"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]